feature(back-4): update document with tests